tests/src/frontend/syntax/invalid/duplicate_method.sk
class C() {
  fun m(): Int {
    0
  }
  fun m(_x: Int): String {
    ""
  }
}

fun main(): void {
  print_raw("Fail")
}
